--- a/4_exercise/exercise.Rmd
+++ b/4_exercise/exercise.Rmd
@@ -65,3 +65,15 @@ summary(dataset)
 ```
 
 # Descriptive Analysis of the portfolio
+```{r, tidy=TRUE}
+#
+```
+
+# Fit a GLM for Claims Frequency
+```{r, tidy=TRUE}
+#
+```
+# Fit a GLM for Claims Severity
+```{r, tidy=TRUE}
+#
+```
