--- a/4_exercise/exercise.ipynb
+++ b/4_exercise/exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,23 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "## If CASdatasets package can be loaded, run the following\n",
     "## Loading the dataset\n",
-    "require(\"CASdatasets\")\n",
-    "data(\"ausprivauto0405\")\n",
+    "# require(\"CASdatasets\")\n",
+    "# data(\"ausprivauto0405\")\n",
     " \n",
     "## split the data set for analysis\n",
-    "set.seed(85)\n",
-    "folds = createDataPartition(ausprivauto0405$ClaimNb, 0.5)\n",
-    "df_ausprivauto0405 = ausprivauto0405[folds[[1]], ]\n",
+    "#set.seed(85)\n",
+    "# folds = createDataPartition(ausprivauto0405$ClaimNb, 0.5)\n",
+    "#df_ausprivauto0405 = ausprivauto0405[folds[[1]], ]\n",
     "# save(df_ausprivauto0405, file=\"../df_ausprivauto0405.RData\")\n",
     "\n",
     "## If CASdatasets package can not be loaded, run the following:\n",
-    "#load(\"df_ausprivauto0405.RData\") # load(file=\"path to the file df_ausprivauto0405\")\n",
+    "load(\"df_ausprivauto0405.RData\") # load(file=\"path to the file df_ausprivauto0405\")\n",
     "dataset <- df_ausprivauto0405 # store as dataset for easier re-use of previous code"
    ]
   },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descriptive Analysis of the portfolio"
+    "# Descriptive Analysis"
    ]
   },
   {
@@ -304,6 +304,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fit a GLM for Claims Frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fit a GLM for Claims Severity"
+   ]
   }
  ],
  "metadata": {
